fixed counter widths; fine tune control icons: dimmed by default, visible on hover over icon container / when active

--- a/replay-demo/src/style.css
+++ b/replay-demo/src/style.css
@@ -19,6 +19,8 @@ div.fps .label {
 
 div.fps .value {
 	margin-right: 1em;
+	width: 3em;
+	display: inline-block;
 }
 
 
@@ -64,12 +66,18 @@ div.matrix-container .controls:hover {
 	background-color: rgba(0, 0, 0, 0.5);
 	outline: 8px solid rgba(0, 0, 0, 0.5);
 	border-radius: 8px;
+	opacity: 1.0;
+}
+
+div.matrix-container .controls:hover i {
+	opacity: 1.0;
 }
 
 div.matrix-container .controls i {
 	color:  #808080;
 	cursor: pointer;
 	margin-right: 0.5em;
+	opacity: 0.5;
 }
 
 
@@ -79,6 +87,7 @@ div.matrix-container .controls i:hover {
 
 div.matrix-container .controls i.on {
 	color:  #59c059;
+	opacity: 1.0;
 }
 
 div.matrix-container .controls i.on:hover {
